tailspin-app/service.yml
---
apiVersion: v1
kind: Service
metadata:
    name: leaderboard
spec:
    type: LoadBalancer
    ports:
    - targetPort: 5000
      port: 80
    selector:
        app: leaderboard

---
apiVersion: v1
kind: Service
metadata:
    name: web
spec:
    type: LoadBalancer
    ports:
    - port: 5001 
    selector:
        app: web
